--- a/templates/post_uploaded.html
+++ b/templates/post_uploaded.html
@@ -13,8 +13,8 @@
     <h1>Пост добавлен! </h1>
 
     <div class="post">
-        <img src="{{ post.pic }}" width="100%" alt="">
-        <p>Текст добавленного поста тут</p>
+        <img src="{{ pic }}" width="100%" alt="">
+        <p>{{ content }}</p>
     </div>
 
     <hr>
